# bellum

./: CMakeLists.txt  README.md
assets/shaders/: vertex_color.fs  vertex_color.vs
bellum/: CMakeLists.txt  fly_camera.h  main.cc  main_scene.cc  main_scene.h  test_component.h
cmake/: add_sources.cmake
engine/: CMakeLists.txt  application.cc  application.h  bellum.h  color.cc  color.h  common.h  component.h  game_object.cc  game_object.h  input.cc  input.h  module.h  node.cc  node.h  random.h  scene.cc  scene.h  scene_manager.cc  scene_manager.h  time.cc  time.h  timing.cc  timing.h  transform.h
engine/common/: CMakeLists.txt  array_list.h  common.h  formatter.h  logger.h  macros.h  optional.h  os.h  types.h
engine/components/: CMakeLists.txt  camera.cc  camera.h  mesh_filter.h  mesh_renderer.h  renderer.cc  renderer.h
engine/math/: CMakeLists.txt  bounds.h  math.h  matrix4.cc  matrix4.h  plane.h  quaternion.cc  quaternion.h  vector2.h  vector3.h  vector4.h
engine/render/: CMakeLists.txt  forward_renderer.h  render_module.cc  render_module.h  renderer.h
engine/resources/: CMakeLists.txt  attribute.cc  attribute.h  binding_info.h  material.h  mesh.cc  mesh.h  mesh_factory.cc  mesh_factory.h  resource.h  resource_loader.cc  resource_loader.h  shader.cc  shader.h
engine/standalone/: CMakeLists.txt  standalone_application.cc  standalone_application.h  window.cc  window.h
engine/update/: CMakeLists.txt  update_module.cc  update_module.h
engine/view/: CMakeLists.txt  render_module.h
src/: CMakeLists.txt  main.cc
src/core/: CMakeLists.txt
src/core/include/core/: core.h
src/core/include/core/common/: common.h
src/core/include/core/math/: matrix4.h  plane.h  quaternion.h  vector3.h  vector4.h
src/core/src/math/: math.h  matrix4.cc  matrix4.h  matrix4.inl  quaternion.cc  quaternion.h  quaternion.inl  vector3-inl.h  vector3.cc  vector3.h  vector3.inl
src/math/: math.h  vector2.h  vector3.h
test/game/: CMakeLists.txt
test/game/src/: main.cc
