add_subdirectory(common)
add_subdirectory(math)
add_subdirectory(standalone)
add_subdirectory(update)
add_subdirectory(render)
add_subdirectory(components)
add_subdirectory(resources)

add_sources(
  application.cc
  application.h
  bellum.h
  color.h
  common.h
  component.h
  module.h
  node.cc
  node.h
  scene.h
  scene.cc
  scene_manager.cc
  scene_manager.h
  timing.h
  timing.cc
  transform.h
)
